--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ cyberapi/.idea/workspace.xml
 cyberapi/Sessions/2017-05-01/dennis_fisher.txt
 *.pdf
 cyberapi/Sessions/2017-05-01/one_result_test.txt
+cyberapi/.idea/cyberapi.iml
+*.xml
